# AppleRobot_xjtu

./: .gitignore  LICENSE  README.md  auto_calibrate_eye_in_hand.py  auto_calibrate_eye_to_hand.py  slam_fusion.rviz  tasks.md  ui_modifications.md  world_base.urdf  软件封装.md
.marscode/: deviceInfo.json
comm/: CMakeLists.txt  package.xml
comm/src/: serial.cpp
img_detect/: CMakeLists.txt  cam_rviz.launch  package.xml
img_detect/include/img_detect/: yolov8_onnx.h  yolov8_utils.h
img_detect/msg/: Apple.msg
img_detect/src/: advance_vision_node.cpp  advanced_rviz.cpp  apple_detect.cpp  img_detect.cpp  start.md  vision_node.cpp  yolov8_onnx.cpp  yolov8_utils.cpp  八叉树.md
pub_pcd/: CMakeLists.txt  package.xml
pub_pcd/src/: pcd_publisher.cpp
qt_ros_nav/: CMakeLists.txt  package.xml
qt_ros_nav/include/qt_ros_nav/: mainwindow.h  ros_node.h  serial_comm.h
qt_ros_nav/launch/: robot_navigation_2.launch
qt_ros_nav/resources/: icons.qrc
qt_ros_nav/scripts/: start_picking.sh
qt_ros_nav/src/: main.cpp  mainwindow copy.cpp  mainwindow.cpp  ros_node.cpp  serial_comm.cpp
qt_ros_nav/ui/: mainwindow.ui
rokae/: CMakeLists.txt  package.xml
rokae/include/rokae/: base.h  data_types.h  exception.h  force_control.h  model.h  motion_control_rt.h  planner.h  robot.h  utility.h
rokae/lib/: libxCoreSDK.so.0.4.0
rokae/src/: 1027backup_canuse.md  auto_handeye_calibration.cpp  camera_depth_scale_left.txt  camera_depth_scale_right.txt  camera_pose_left.txt  camera_pose_right.txt  demoboth.cpp  demoboth_backup_1026.md  demoboth_backup_1027.md  leftRokae.cpp  leftRokaegoHome.cpp  leftRokaegodemo.cpp  left_drop.txt  left_robot_control_node.cpp  pose.md  print_helper.hpp  rightRokae.cpp  rightRokaegoHome.cpp  rightRokaegodemo.cpp  right_drop.txt  right_robot_control_node.cpp  robot_control_node.cpp  rokae_smart_picking_right.md  smart_robot_node.cpp  最优抓去策略.md
rokae/src/calibration_results_eye_to_hand/20260424_180032/: accepted_poses.csv
rokae/src/calibration_results_eye_to_hand/20260424_180135/: camera_matrix.txt
rokae/src/calibration_results_eye_to_hand/20260424_180825/: dist_coeffs.txt
rokae/src/calibration_results_eye_to_hand/20260424_204100/: accepted_poses.csv  camera_matrix.txt
rokae/src/calibration_results_eye_to_hand/20260424_205748/: T_base2cam.txt  T_cam2base_ANDREFF.txt  T_cam2base_DANIILIDIS.txt  T_cam2base_HORAUD.txt  T_cam2base_PARK.txt  T_cam2base_TSAI.txt  accepted_poses.csv  calibration_summary.txt  camera_matrix.txt
rokae/src/calibration_results_eye_to_hand/20260428_214910/: camera_matrix.txt
rokae_description/: CMakeLists.txt  package.xml  test_dual_arm.urdf
rokae_description/launch/: display_dual_arm.launch  rokae_display.launch  xMatePro7.rviz  xMateSR4.rviz
rokae_description/meshes/xMateCR7/collision/: xMateCR7_link1.stl  xMateCR7_link3.stl  xMateCR7_link5.stl
rokae_description/meshes/xMateCR7/visual/: xMateCR7_link2.stl  xMateCR7_link4.stl  xMateCR7_link6.stl
rokae_description/meshes/xMateER3p/collision/: xMatePro3_base.stl  xMatePro3_link1.stl  xMatePro3_link2.stl
rokae_description/meshes/xMateER3p/visual/: xMatePro3_link3.stl  xMatePro3_link4.stl  xMatePro3_link5.stl  xMatePro3_link6.stl  xMatePro3_link7.stl
rokae_description/meshes/xMateSR4/collision/: xMateSR4_link1.stl  xMateSR4_link6.stl
rokae_description/urdf/: dual_arm_xmate.xacro  xMateCR7.xacro  xMatePro3.xacro  xMatePro7.xacro  xMateSR4.xacro  xmate_sr4_macro.xacro
rokae_hardware/: CMakeLists.txt  package.xml
rokae_hardware/include/rokae_hardware/: rokae_hardware.h
rokae_hardware/sdk/: CMakeLists.txt
rokae_hardware/sdk/include/rokae/: data_types.h
rokae_hardware/sdk/include/rokae/old_sdk/: base.h  data_types.h  exception.h  model.h  motion_control_rt.h  planner.h  robot.h  utility.h
rokae_hardware/src/: left_rokae_hardware.cpp  right_rokae_hardware.cpp
rokae_msgs/: CMakeLists.txt  package.xml
rokae_msgs/msg/: JointPosVel.msg  RobotMode.msg  RobotState.msg
task_assign/: CMakeLists.txt  package.xml
task_assign/src/: target_assign.cpp
task_assign/srv/: Target.srv
world_base/: CMakeLists.txt  package.xml
world_base/launch/: display.launch  gazebo.launch
world_base/urdf/: test.m  world_base.csv  world_base.slx.autosave  world_base.urdf
